--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+      <!--<div id="results-carousel" class="carousel results-carousel">-->
        <div class="item">
         <img src="static/images/overview.png" alt="CellularLint Framework"/>
         <h3 class="subtitle has-text-centered">
           Framework Overview
         </h3>
-      </div>
+        </div>
+      <!--</div>-->
+    </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
