--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 </p>
             </div>
             <div class="custom-text-block">
-                <p>T<sub>2</sub>: The UE shall take the received NCC value and save it as stored NCC · · · .
+                <p>T<sub>2</sub>: The UE shall take the received NCC value and save it as stored NCC... .
                   If the stored NCC value is different from the NCC value associated with the
                   current K<sub>gNB</sub>, the UE shall delete the current AS key K<sub>gNB</sub>.
                 </p>
@@ -484,7 +484,7 @@
           </p>
           <div class="custom-box">
             <div class="custom-text-block">
-                <p>T<sub>1</sub>: : #13 (Roaming not allowed in this tracking area) 
+                <p>T<sub>1</sub>: #13 (Roaming not allowed in this tracking area) 
                   The UE shall set the 5GS update status to 5U3 ROAMING NOT ALLOWED (and shall store it according
                   to subclause 5.1.3.2.2) and shall delete 5G-GUTI, last visited registered TAI, TAI list and ngKSI.
                 </p>
