--- a/index.html
+++ b/index.html
@@ -908,6 +908,15 @@ month = aug
 </section>
 <!--End BibTex citation -->
 
+<!--Acknowledgement -->
+  <section class="section" id="Acknowledgement">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Acknowledgement</h2>
+      <p>This work is supported by U.S. National Science Foundation AI Institute for Future Edge Networks and Distributed Intelligence (NSF AI EDGE Institute).</p>
+    </div>
+</section>
+<!--End Acknowledgement -->
+
 
   <footer class="footer">
   <div class="container">
