--- a/index.html
+++ b/index.html
@@ -912,7 +912,13 @@ month = aug
   <section class="section" id="Acknowledgement">
     <div class="container is-max-desktop content">
       <h2 class="title">Acknowledgement</h2>
-      <p>This work is supported by U.S. National Science Foundation AI Institute for Future Edge Networks and Distributed Intelligence (NSF AI EDGE Institute).</p>
+      <p>This work is supported by U.S. National Science Foundation AI Institute for Future Edge Networks and Distributed Intelligence (<b>NSF AI EDGE Institute</b>).</p>
+      <div class="item">
+        <img src="static/images/AI_EDGE_Logo_transparent_New.png" alt="NSF AI EDGE"/>
+        <h2 class="subtitle has-text-centered">
+          NSF AI EDGE Institute
+        </h2>
+      </div>
     </div>
 </section>
 <!--End Acknowledgement -->
