--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@ month = aug
       <p>This work is supported by U.S. National Science Foundation AI Institute for Future Edge Networks and Distributed Intelligence (<b>NSF AI EDGE Institute</b>).</p>
       <div class="item">
         <img src="static/images/AI_EDGE_Logo_transparent_New.png" alt="NSF AI EDGE"/>
-        <!--<h2 class="subtitle has-text-centered"-->
+        <!--<h2 class="subtitle has-text-centered">
           NSF AI EDGE Institute
         </h2>-->
       </div>
